# gen2ntuple

./: CLAUDE.md  README.md  check_output.py  extract_and_compress_cosmicreco.py  make_dlgen2_flat_ntuples.py  tufts_run_ntuple_maker.sh  tufts_submit_ntuple_job_example.sh
gen2ntuple/: CMakeLists.txt  README.md  compare_ntuple_outputs.py  set_gen2ntuple_env.sh  test_weight_loading.cxx  tufts_test_ntuple_maker.sh  verify_pickle_structure.py
gen2ntuple/cmake/: Config.cmake.in
gen2ntuple/gen2ntuple/: BranchManager.cxx  BranchManager.h  CMakeLists.txt  ChargeCalculator.cxx  ChargeCalculator.h  Configuration.cxx  Configuration.h  EventData.cxx  EventData.h  EventProcessor.cxx  EventProcessor.h  FileManager.cxx  FileManager.h  FlashPEVertexSelection.cxx  FlashPEVertexSelection.h  GeometryUtils.cxx  GeometryUtils.h  GetNuCandidateIntimeCharge.cxx  GetNuCandidateIntimeCharge.h  HighestKPRankWithVisEnergy.cxx  HighestKPRankWithVisEnergy.h  Logger.cxx  Logger.h  MCTruthProcessor.cxx  MCTruthProcessor.h  PCAAnalyzer.cxx  PCAAnalyzer.h  PhotonVertexSelection.cxx  PhotonVertexSelection.h  RecoData.cxx  RecoData.h  SelectNuVertex.cxx  SelectNuVertex.h  ShowerProcessor.cxx  ShowerProcessor.h  TrackProcessor.cxx  TrackProcessor.h  VertexSelectionBase.cxx  VertexSelectionBase.h  VertexSelector.cxx  (+8 more)
helpers/: intime_vertex.py  larflowreco_ana_funcs.py  select_nu_vertex.py
studies/flashprediction/: CMakeLists.txt  README.md  build.sh  check_alignment.py  combine_flash_predictions.py  combine_flash_predictions_vectorized.py  dump_flash_predictions.py  make_flash_prediction_plots.py  match_ntuple_files.py  quick_summary.py  run_hadd.py  submit_flash_prediction_jobs.py  tufts_run_flash_prediction.sh  tufts_submit_flash_prediction.sh
studies/flashprediction/cmake/: Config.cmake.in
studies/flashprediction/flashprediction/: CMakeLists.txt  calculate_flash_predictions.cxx  calculate_flash_predictions_vectorized.cxx
studies/photonselection/: CMakeLists.txt  README.md  plot_selection_vars.py  run_hadd.py  tufts_run_photon_selection.sh  tufts_submit_photon_selection.sh
studies/photonselection/cmake/: Config.cmake.in
studies/photonselection/source/: CMakeLists.txt  make_photon_selection_study_tree.cxx
